fixed inverted color text for bio-benefits, fixed grid sizing for StartBuildingWithinMinutes section

--- a/src/components/BioEasySetUp/styles.scss
+++ b/src/components/BioEasySetUp/styles.scss
@@ -3,28 +3,35 @@
 
 @include host("bio-easy-set-up") {
 	.easy-setup-wrapper {
+		display: -ms-grid;
 		display: grid;
+		-ms-grid-columns: 70px 1fr;
 		grid-template-columns: 70px 1fr;
 		column-gap: 10px;
 		padding: 40px 0;
         
 		@include breakpoint($large) {
+            -ms-grid-columns: 1fr 70px 1fr;
             grid-template-columns: 1fr 70px 1fr;
 			min-height: 165px;
 			padding: 0 0 190px 0;
 
 			&.left {
-				.text-wrapper, code{
-					grid-column-start: 1;
+				.text-wrapper, .code{
+					-ms-grid-column: 1;
+					grid-column: 1;
 				}
 			}
 		}
 
 		.text-wrapper {
-			grid-column-start: 2;
-			grid-row-start: 1;
+			-ms-grid-column: 2;
+			-ms-grid-row: 1;
+			grid-column: 2;
+			grid-row: 1;
 
 			@include breakpoint($large) {
+				-ms-grid-column: 3;
 				grid-column-start: 3;
 			}
 		}
@@ -41,17 +48,24 @@
 			margin-top: 0;
 		}
 
-        code {
-			grid-column-start: 2;
+        .code {
+			-ms-grid-column: 2;
+			-ms-grid-row: 2;
+			grid-column: 2;
+			grid-row: 2;
 			padding: 10px 20px;
+			margin: 0;
 			background: $bio-white;
             border-radius: 10px;
             box-shadow: 2px 2px 8px $bio-shadow-gray;
-            font-weight: $font-weight-bold;
-
+			font-weight: $font-weight-bold;
+			
 			@include breakpoint($large) {
-				grid-column-start: 3;
-				height: 26px;
+				-ms-grid-column: 3;
+				grid-column: 3;
+				-ms-grid-row: 2;
+				grid-row: 2;
+				height: -webkit-fill-available;
 			}
 		}
 	}
@@ -63,7 +77,8 @@
 
 		@include breakpoint($large) {
 			margin: auto;
-			grid-column-start: 2;
+			-ms-grid-column: 2;
+			grid-column: 2;
 		}
 	}
 }
