feat(cookiebanner): add cookiebanner
re #71

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -354,3 +354,5 @@
         </div>
     </div>
 </bio-modal>
+
+<bio-cookie-banner data-resources="[{paths: ['components/BioCookieBanner/index.js']}]"></bio-cookie-banner>
