feat(bio-collaborators): add collaborators to list

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -246,7 +246,7 @@
     </div>
 </footer>
 
-<bio-modal modalType="whosBehind" data-resources="[{paths: ['components/BioModal/index.js']}]">
+<bio-modal modalType="whosBehind" openonpageload="true" data-resources="[{paths: ['components/BioModal/index.js']}]">
     <div class="row row--reducedWidth">
         <div class="col">
             <section class="whosBehind">
@@ -257,23 +257,57 @@
                 <h4 class="whosBehind__headline">Core Group</h4>
 
                 <div class="whosBehind__list">
-                    <bio-collaborator-tile imgsrc="../_assets/marc.jpg">Marc Emmanuel
+                    <bio-collaborator-tile imgsrc="https://avatars1.githubusercontent.com/u/8701422?s=460&v=4">Marc Emmanuel
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="../_assets/tiago.jpg">Tiago Marques
+                    <bio-collaborator-tile imgsrc="https://avatars2.githubusercontent.com/u/704002?s=460&v=4">Tiago Marques
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="../_assets/timo.jpg">Timo Mayer</bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="../_assets/danny.jpg">Danny Stey</bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="https://avatars1.githubusercontent.com/u/1905161?s=460&v=4">Timo Mayer</bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/4408826?s=460&v=4">Danny Stey</bio-collaborator-tile>
                 </div>
 
                 <h4 class="whosBehind__headline">Collaborators</h4>
 
                 <div class="whosBehind__list">
-                    <bio-collaborator-tile imgsrc="../_assets/marc.jpg">Marc Emmanuel
+                    <bio-collaborator-tile imgsrc="https://avatars2.githubusercontent.com/u/4015313?s=460&v=4"
+                    github="https://github.com/janrembold">Jan Rembold
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="../_assets/tiago.jpg">Tiago Marques
+                    <bio-collaborator-tile imgsrc="https://avatars1.githubusercontent.com/u/3169754?s=460&v=4">Alexander Benz
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="../_assets/timo.jpg">Timo Mayer</bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="../_assets/danny.jpg">Danny Stey</bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="https://avatars0.githubusercontent.com/u/4249843?s=460&v=4">Jurek Barth
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="https://avatars1.githubusercontent.com/u/1375720?s=460&v=4">Saeid Mohadjer
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/3465835?s=460&v=4">Matthias Schulz
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="_assets/custom-avatars/robin-spielmann.jpg">Robin Spielmann</bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/32572355?s=460&v=4">Dominikus Weiger
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="https://avatars0.githubusercontent.com/u/4287128?s=460&v=4">David Losert
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/51372512?s=460&v=4">Tiago Aguiar
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="https://avatars2.githubusercontent.com/u/16318844?s=460&v=4">Lukas Müller
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/23478343?s=460&v=4">Lukas Gorniak
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="https://avatars2.githubusercontent.com/u/8968377?s=460&v=4">Deborah Köpfer
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="https://avatars1.githubusercontent.com/u/10438490?s=460&v=4">Christoph Hummel
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="https://avatars2.githubusercontent.com/u/25197658?s=460&v=4">Kai Wißler
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="https://avatars2.githubusercontent.com/u/48211993?s=460&v=4">Simon Braun
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/41577958?s=460&v=4">Filipe Martins
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="https://avatars1.githubusercontent.com/u/7582607?s=460&v=4">Clemens Fiedler
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/32572354?s=460&v=4">Benjamin Konopka
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="https://avatars1.githubusercontent.com/u/46744222?s=460&v=4">Edwin Repp
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/5878267?s=460&v=4">Jonas Begemann
+                    </bio-collaborator-tile>
                 </div>
             </section>
         </div>
