feat(bio-collaborators): add collaborators to list

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -271,42 +271,44 @@
                     <bio-collaborator-tile imgsrc="https://avatars2.githubusercontent.com/u/4015313?s=460&v=4"
                     github="https://github.com/janrembold">Jan Rembold
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="https://avatars1.githubusercontent.com/u/3169754?s=460&v=4">Alexander Benz
+                    <bio-collaborator-tile imgsrc="https://avatars1.githubusercontent.com/u/3169754?s=460&v=4" github="https://github.com/alxbenz">Alexander Benz
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="https://avatars0.githubusercontent.com/u/4249843?s=460&v=4">Jurek Barth
+                    <bio-collaborator-tile imgsrc="https://avatars0.githubusercontent.com/u/4249843?s=460&v=4" github="https://github.com/jurekbarth">Jurek Barth
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="https://avatars1.githubusercontent.com/u/1375720?s=460&v=4">Saeid Mohadjer
+                    <bio-collaborator-tile imgsrc="https://avatars1.githubusercontent.com/u/1375720?s=460&v=4" github="https://github.com/smohadjer">Saeid Mohadjer
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/3465835?s=460&v=4">Matthias Schulz
+                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/3465835?s=460&v=4" github="https://github.com/jashson">Matthias Schulz
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="_assets/custom-avatars/robin-spielmann.jpg">Robin Spielmann</bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/32572355?s=460&v=4">Dominikus Weiger
+                    <bio-collaborator-tile imgsrc="_assets/custom-avatars/robin-spielmann.jpg" github="https://github.com/iam-robin">Robin Spielmann</bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/32572355?s=460&v=4" github="https://github.com/dweiger">Dominikus Weiger
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="https://avatars0.githubusercontent.com/u/4287128?s=460&v=4">David Losert
+                    <bio-collaborator-tile imgsrc="https://avatars0.githubusercontent.com/u/4287128?s=460&v=4" github="https://github.com/davelosert">David Losert
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/51372512?s=460&v=4">Tiago Aguiar
+                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/51372512?s=460&v=4" github="https://github.com/tiagoaguiar31">Tiago Aguiar
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="https://avatars2.githubusercontent.com/u/16318844?s=460&v=4">Lukas Müller
+                    <bio-collaborator-tile imgsrc="https://avatars2.githubusercontent.com/u/16318844?s=460&v=4" github="https://github.com/luke-m">Lukas Müller
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/23478343?s=460&v=4">Lukas Gorniak
+                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/23478343?s=460&v=4" github="https://github.com/VI-Lukas">Lukas Gorniak
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="https://avatars2.githubusercontent.com/u/8968377?s=460&v=4">Deborah Köpfer
+                    <bio-collaborator-tile imgsrc="https://avatars2.githubusercontent.com/u/8968377?s=460&v=4" github="https://github.com/koepferd">Deborah Köpfer
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="https://avatars1.githubusercontent.com/u/10438490?s=460&v=4">Christoph Hummel
+                    <bio-collaborator-tile imgsrc="https://avatars1.githubusercontent.com/u/10438490?s=460&v=4" github="https://github.com/hummelch">Christoph Hummel
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="https://avatars2.githubusercontent.com/u/25197658?s=460&v=4">Kai Wißler
+                    <bio-collaborator-tile imgsrc="https://avatars2.githubusercontent.com/u/25197658?s=460&v=4" github="https://github.com/no-creative-name">Kai Wißler
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="https://avatars2.githubusercontent.com/u/48211993?s=460&v=4">Simon Braun
+                    <bio-collaborator-tile imgsrc="https://avatars2.githubusercontent.com/u/48211993?s=460&v=4" github="https://github.com/simonbraunbrown">Simon Braun
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/41577958?s=460&v=4">Filipe Martins
+                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/41577958?s=460&v=4" github="https://github.com/filipemartinsfe">Filipe Martins
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="https://avatars1.githubusercontent.com/u/7582607?s=460&v=4">Clemens Fiedler
+                    <bio-collaborator-tile imgsrc="https://avatars1.githubusercontent.com/u/7582607?s=460&v=4" github="https://github.com/clemensf">Clemens Fiedler
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/32572354?s=460&v=4">Benjamin Konopka
+                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/32572354?s=460&v=4" github="https://github.com/bennyvi">Benjamin Konopka
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="https://avatars1.githubusercontent.com/u/46744222?s=460&v=4">Edwin Repp
+                    <bio-collaborator-tile imgsrc="https://avatars1.githubusercontent.com/u/46744222?s=460&v=4" github="https://github.com/ItsmeEddi">Edwin Repp
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/5878267?s=460&v=4">Jonas Begemann
+                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/5878267?s=460&v=4" github="https://github.com/jonerd">Jonas Begemann
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/26483886?s=460&v=4" github="https://github.com/IvailoStoyanov">Ivaylo Stoyanov
                     </bio-collaborator-tile>
                 </div>
             </section>
