70 ie11grid fix (#78)
* fixed inverted color text for bio-benefits, fixed grid sizing for StartBuildingWithinMinutes

--- a/src/components/BioBenefit/styles.scss
+++ b/src/components/BioBenefit/styles.scss
@@ -9,6 +9,16 @@
         flex-flow: row wrap;
         padding-bottom: 40px;
         text-align: center;
+
+        &.inverted {
+            h3 {
+                color: $bio-white;
+                }
+
+            p {
+                color: $bio-lighter-blue;
+            }
+        }
         
         > * {
             flex: 1 100%;
@@ -31,14 +41,4 @@
         }
     }
 
-    &:host([inverted]) {
-        .wrapper {
-            h3 {
-                color: $bio-white;
-            }
-            p {
-                color: $bio-lighter-blue;
-            }
-        }
-    }
 }
