--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -82,7 +82,6 @@
 
     <div class="row row--reducedWidth">
         <div class="col">
-            <img class="installation__line" src="../_assets/BioEasySetUp/line.svg">
             <div class="installation__intro">
                 <h3>Biotope Installation <br> <strong>Start building <br> within minutes.</strong></h3>
                 <p>
@@ -126,6 +125,7 @@
                 text="Install the included build-ststem that helps you to automatically build product-ready resources"
                 code="biotope generate">
             </bio-easy-set-up>
+            <img class="installation__line" src="../_assets/BioEasySetUp/line.svg">
         </div>
     </div>
 </section>
@@ -179,15 +179,15 @@
                     Develop digital experiences <br> <strong>Flexible. Constant.<br> Across All Devices.</strong>
                 </h3>
             <div class="extendedBenefits__container">
-                <bio-benefit inverted data-resources="[{paths: ['components/BioBenefit/index.js']}]"
+                <bio-benefit color="inverted" data-resources="[{paths: ['components/BioBenefit/index.js']}]"
                     imgsrc="../../_assets/icon-quality-focus.svg" title="Quality Focus">
                     Develop high quality components instead of the architecture and development environment required. (That's Biotope's job).
                 </bio-benefit>
-                <bio-benefit inverted data-resources="[{paths: ['components/BioBenefit/index.js']}]"
+                <bio-benefit color="inverted" data-resources="[{paths: ['components/BioBenefit/index.js']}]"
                     imgsrc="../../_assets/icon-consistent-design.svg" title="Consistent Design">
                     Roll out your interface from a single point of truth - simultaneously for all of your digital products. Keep your brand identity consistent across all your websites, apps or IoT. Say goodbye to design debt.
                 </bio-benefit>
-                <bio-benefit inverted data-resources="[{paths: ['components/BioBenefit/index.js']}]"
+                <bio-benefit color="inverted" data-resources="[{paths: ['components/BioBenefit/index.js']}]"
                     imgsrc="../../_assets/icon-scalability.svg" title="Scalable Infrastructure">
                     Grow your library as big as you want. With Biotope collaboration is easy and your projects only uses the Web Components they need so perormance stays high.
                 </bio-benefit>
