text changes - Biotope consistency, Favicon, title, Description, link adjustments, removed knowMore section

--- a/src/layouts/includes/htmlhead.meta.hbs
+++ b/src/layouts/includes/htmlhead.meta.hbs
@@ -5,7 +5,7 @@
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 
 <title>{{data.frontMatter.title}}</title>
-<meta name="description" content="include meta description here">
+<meta name="description" content="Biotope helps you build Web Components quickly, makes sure they work together and reconciles them into a single library to give you lasting control of your entire UI.">
 
 <!-- Mobile viewport optimized: h5bp.com/viewport -->
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,8 +13,8 @@
 <!-- do not detect phone numbers -->
 <meta name="format-detection" content="telephone=no">
 
-<meta property="og:title" content="use same as page title">
-<meta property="og:description" content="use same as meta description">
+<meta property="og:title" content="{{data.frontMatter.title}}">
+<meta property="og:description" content="Biotope helps you build Web Components quickly, makes sure they work together and reconciles them into a single library to give you lasting control of your entire UI.">
 <meta property="og:type" content="website">
 
 <!--DEV-NOTE: next two exntries are optional. define a custom share image and URL or remove this two lines -->
