--- a/src/pages/01site.01master.hbs
+++ b/src/pages/01site.01master.hbs
@@ -1,7 +1,7 @@
 ---
 # These values are used for creating the index
 # It is also possible to use these inside the partials via {{ data.frontMatter.[your property] }}
-title: The page
+title: Biotope | Toolchain for Lasting Design Systems
 description: Master page
 ---
 
