feat(cookiebanner): finish cookiebanner functionality
initialize GTM & GA only after user pressed accept, remove cookies when user presses decline etc

re #71 re #96

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -350,6 +350,9 @@
                 Please refer to sections 2 and 7-9 of this privacy policy.<br>
                 b. canditature<br>
                 Information about your application can be found in point 5.</p>
+                <p>
+                    <a data-cookie-settings>Edit cookie settings</a>
+                </p>
             </section>
         </div>
     </div>
