refactor(collaborators): code review clean up

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -246,7 +246,7 @@
     </div>
 </footer>
 
-<bio-modal modalType="whosBehind" openonpageload="true" data-resources="[{paths: ['components/BioModal/index.js']}]">
+<bio-modal modalType="whosBehind" data-resources="[{paths: ['components/BioModal/index.js']}]">
     <div class="row row--reducedWidth">
         <div class="col">
             <section class="whosBehind">
