--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -259,7 +259,7 @@
                 <div class="whosBehind__list">
                     <bio-collaborator-tile imgsrc="https://avatars1.githubusercontent.com/u/8701422?s=460&v=4" github="https://github.com/SheepFromHeaven">Marc Emmanuel
                     </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="https://avatars2.githubusercontent.com/u/704002?s=460&v=4" github="https://github.com/tiagomapmarques">Tiago Marques
+                    <bio-collaborator-tile imgsrc="_assets/custom-avatars/tiago-marques.jpg" github="https://github.com/tiagomapmarques">Tiago Marques
                     </bio-collaborator-tile>
                     <bio-collaborator-tile imgsrc="https://avatars1.githubusercontent.com/u/1905161?s=460&v=4" github="https://github.com/timomayer">Timo Mayer</bio-collaborator-tile>
                     <bio-collaborator-tile imgsrc="https://avatars3.githubusercontent.com/u/4408826?s=460&v=4" github="https://github.com/dannystey">Danny Stey</bio-collaborator-tile>
