--- a/src/resources/scss/fonts/_fonts.scss
+++ b/src/resources/scss/fonts/_fonts.scss
@@ -1,23 +1,66 @@
-//@font-face{
-//	font-family:"Frutiger";
-//	src:url("../fonts/e5b1a25e-0d2b-4aec-8672-da21553f205d.eot?#iefix");
-//	src:url("../fonts/e5b1a25e-0d2b-4aec-8672-da21553f205d.eot?#iefix") format("eot"),
-//	url("../fonts/5ff03272-db79-41a8-ba43-504e794a61b3.woff2") format("woff2"),
-//	url("../fonts/e59898b4-93a8-4df7-885a-7806f9f0604d.woff") format("woff"),
-//	url("../fonts/85928e7e-2ace-4f1d-be54-b11c333a8d97.ttf") format("truetype"),
-//	url("../fonts/89390d0d-7a62-493d-9e77-9c162a709520.svg#89390d0d-7a62-493d-9e77-9c162a709520") format("svg");
-//	font-weight: 400;
-//	font-style: normal;
-//}
-//
-//@font-face{
-//	font-family:"Frutiger";
-//	src:url("../fonts/a3a15351-8e3c-4c29-82e6-15b106c2181f.eot?#iefix");
-//	src:url("../fonts/a3a15351-8e3c-4c29-82e6-15b106c2181f.eot?#iefix") format("eot"),
-//	url("../fonts/d9235e39-d563-4c19-bdad-bb1bcd8c692d.woff2") format("woff2"),
-//	url("../fonts/f1f95a55-f0c6-4fb5-8939-b93160b7a751.woff") format("woff"),
-//	url("../fonts/032fd83c-fe79-47fa-9dda-0a3f03bd0506.ttf") format("truetype"),
-//	url("../fonts/17f04727-b70e-460f-8b5c-c8cd21771240.svg#17f04727-b70e-460f-8b5c-c8cd21771240") format("svg");
-//	font-weight: 600;
-//	font-style: normal;
-//}
+/* monda-regular - latin */
+@font-face {
+    font-family: 'Monda';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/monda-v9-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local('Monda Regular'), local('Monda-Regular'),
+         url('../fonts/monda-v9-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/monda-v9-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/monda-v9-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/monda-v9-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/monda-v9-latin-regular.svg#Monda') format('svg'); /* Legacy iOS */
+  }
+  /* monda-700 - latin */
+  @font-face {
+    font-family: 'Monda';
+    font-style: normal;
+    font-weight: 700;
+    src: url('../fonts/monda-v9-latin-700.eot'); /* IE9 Compat Modes */
+    src: local('Monda Bold'), local('Monda-Bold'),
+         url('../fonts/monda-v9-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/monda-v9-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/monda-v9-latin-700.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/monda-v9-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/monda-v9-latin-700.svg#Monda') format('svg'); /* Legacy iOS */
+  }
+
+  /* work-sans-300 - latin */
+@font-face {
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 300;
+    src: url('../fonts/work-sans-v5-latin-300.eot'); /* IE9 Compat Modes */
+    src: local('Work Sans Light'), local('WorkSans-Light'),
+         url('../fonts/work-sans-v5-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/work-sans-v5-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/work-sans-v5-latin-300.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/work-sans-v5-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/work-sans-v5-latin-300.svg#WorkSans') format('svg'); /* Legacy iOS */
+  }
+  /* work-sans-regular - latin */
+  @font-face {
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/work-sans-v5-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local('Work Sans'), local('WorkSans-Regular'),
+         url('../fonts/work-sans-v5-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/work-sans-v5-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/work-sans-v5-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/work-sans-v5-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/work-sans-v5-latin-regular.svg#WorkSans') format('svg'); /* Legacy iOS */
+  }
+  /* work-sans-600 - latin */
+  @font-face {
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 600;
+    src: url('../fonts/work-sans-v5-latin-600.eot'); /* IE9 Compat Modes */
+    src: local('Work Sans SemiBold'), local('WorkSans-SemiBold'),
+         url('../fonts/work-sans-v5-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/work-sans-v5-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/work-sans-v5-latin-600.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/work-sans-v5-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/work-sans-v5-latin-600.svg#WorkSans') format('svg'); /* Legacy iOS */
+  }
