--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -335,6 +335,14 @@ section {
 			width: 50%;
 		}
 	}
+
+	a {
+		cursor: pointer;
+
+		&:hover {
+			color: $bio-dark-blue-gray;
+		}
+	}
 }
 
 
@@ -504,4 +512,9 @@ section {
 			}
 		}
 	}
+}
+
+bio-cookie-banner {
+	position: fixed;
+	bottom: 0;
 }
