--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -386,7 +386,12 @@
                 Please refer to sections 2 and 7-9 of this privacy policy.<br>
                 b. canditature<br>
                 Information about your application can be found in point 5.</p>
+                <p>
+                    <a data-cookie-settings>Edit cookie settings</a>
+                </p>
             </section>
         </div>
     </div>
 </bio-modal>
+
+<bio-cookie-banner data-resources="[{paths: ['components/BioCookieBanner/index.js']}]"></bio-cookie-banner>
