Privacy policy added, link styling applied

--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -335,6 +335,19 @@ section {
 			width: 50%;
 		}
 	}
+
+	a {
+		color: $bio-dark-blue;
+
+		&.internal{
+			color: $bio-darker-blue;
+		}
+
+		&:hover {
+			color: $bio-darker-blue;
+			cursor: pointer;
+		}
+	}
 }
 
 
