text readability <br> change

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -26,7 +26,8 @@
                 <img src="../_assets/intro-main.svg" alt="">
 				<div class="benefits__claimText">
                     <h3>
-                        One Web Component Library. As Many Worlds As You Want.
+                        One Web Component Library.<br>
+                        As Many Worlds As You Want.
                     </h3>
                     <p>
                         The superpower of Web Components is that they are reusable. Build them once and use them in any project across your whole company. 
