fixed safari bloated code examples and made adjustments for chrome accordingly

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -82,7 +82,8 @@
 				alt="step one"
                 headline="Install Package"
                 text="Install Biotope as global package with npm."
-                code="npm install biotope -g">
+                code="npm install biotope -g"
+                bloated>
             </bio-easy-set-up>
             <bio-easy-set-up position="left" data-resources="[{paths: ['components/BioEasySetUp/index.js']}]"
 				imgsrc="_assets/BioEasySetUp/2.svg"
