--- a/src/components/BioEasySetUp/styles.scss
+++ b/src/components/BioEasySetUp/styles.scss
@@ -65,7 +65,6 @@
 				grid-column: 3;
 				-ms-grid-row: 2;
 				grid-row: 2;
-				height: -webkit-fill-available;
 			}
 		}
 	}
@@ -79,6 +78,14 @@
 			margin: auto;
 			-ms-grid-column: 2;
 			grid-column: 2;
+		}
+	}
+}
+
+&:host([bloated]) {
+	@include breakpoint($large) {
+		.code {
+			max-height: 26px;
 		}
 	}
 }
