spelling misstakes taken care of

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -40,11 +40,11 @@
             <div class="benefits__container">
                 <bio-benefit data-resources="[{paths: ['components/BioBenefit/index.js']}]"
                     imgsrc="../../_assets/framework-agnostic.svg" title="Framework Agnostic">
-                    Biotope works with any framework - Angular, React, Vue, etc. so there won't be any compatability issues. Use whichever you want. Or switch when it suits you.
+                    Biotope works with any framework - Angular, React, Vue, etc. so there won't be any compatibility issues. Use whichever you want. Or switch when it suits you.
                 </bio-benefit>
                 <bio-benefit data-resources="[{paths: ['components/BioBenefit/index.js']}]"
                     imgsrc="../../_assets/future-proof.svg" title="Futureproof">
-                    Web Components are a standard web technology. Because there is no coupling to the apps or websites for which they are used, 
+                    Web Components are a standard web technology. Because there is no coupling to the apps or websites where they are used in, 
                     your library of Web Components theoretically lives on forever.
                 </bio-benefit>
                 <bio-benefit data-resources="[{paths: ['components/BioBenefit/index.js']}]"
@@ -110,7 +110,7 @@
 				imgsrc="_assets/BioEasySetUp/5.svg"
 				alt="step five"
                 headline="Start Building Components"
-                text="Install the included build-ststem that helps you to automatically build product-ready resources"
+                text="Install the included build-system that helps you to automatically build product-ready resources"
                 code="biotope generate">
             </bio-easy-set-up>
             <img class="installation__line" src="../_assets/BioEasySetUp/line.svg">
