--- a/src/components/BioScrollAnimation/scaffolding/BioScrollAnimation.hbs
+++ b/src/components/BioScrollAnimation/scaffolding/BioScrollAnimation.hbs
@@ -1,7 +1,7 @@
 <bio-scroll-animation
 	animation-data-path="/_assets/animation.json"
 	slide-duration="1500"
-	scroll-length="12000"
+	scroll-length="10000"
 	data-resources="[{
 	paths: [
 		'components/BioScrollAnimation/index.js'
@@ -9,32 +9,28 @@
 
 	<section class="animation-slide">
 		<h3>Build</h3>
-		<p>the Web Components you need for your project. Not the architecture and tools around it. That’s what Biotope is for</p>
-	</section>
-
-	<section class="animation-slide">
-		<h3>Adopt</h3>
-		<p>your components for any of your digital projects. Biotope ensures they work with any framework: React, Angular, Vue, you name it.</p>
+		<p>the Web Components you need for your project. Not the architecture and tools around it. That's what Biotope is for - including polyfilling and templating for browsers that need them.</p>
 	</section>
 
 	<section class="animation-slide">
 		<h3>Collaborate</h3>
-		<p>across several teams or a company on your component pool. Biotope’s in-built quality gate ensures all standards within the ecosystem are met – no matter what tech stack is used.</p>
+		<p>across several teams or projects on your component pool. Biotope's in-built quality gate and living styleguide ensure all standards are met - no matter who works on it and what tech stack is used.</p>
 	</section>
 
 	<section class="animation-slide">
 		<h3>Distribute</h3>
-		<p>your Web Components simultaneously from a single location – not for every website and app individually.</p>
+		<p>your Web Components simultaneously from a single location - not for every website or app individually. This guarantees a consistent appearance throughout all of your digital products. Conditional loading ensures you only ever tap the resources you need. </p>
 	</section>
 
 	<section class="animation-slide">
-		<h3>Maintain</h3>
-		<p>a consistent appearance throughout all of your digital outlets. Easily enforce style and branding guidelines.</p>
+		<h3>Adopt</h3>
+		<p>your components for any of your digital products. The living styleguide shows how to use them. Biotope ensures they work in any framework: React, Angular, Vue - whichever you prefer.</p>
 	</section>
 
 	<section class="animation-slide">
 		<h3>Stay ahead</h3>
-		<p>of changing infrastructures and tools. Reduce design debt, energy and extortionate maintenance costs. The use of Biotope already pays off if you manage more than one digital product.</p>
+		<p>and continuously evolve your library with every new version of a component. Thereby easily enforcing style and branding guidelines. Get rid of design debt and excessive maintenance costs. </p>
+		<p>The use of Biotope already pays off if you manage more than one digital product.</p>
 	</section>
 
 </bio-scroll-animation>
