dynamically set aspectRatio handling, still needs improvement.

--- a/src/components/BioScrollAnimation/styles.scss
+++ b/src/components/BioScrollAnimation/styles.scss
@@ -34,7 +34,7 @@
 			top: 75%;
 			-webkit-transform: translate(0, -75%);
 			transform: translate(0, -75%);
-			right: 0;
+			right: 10px;
 
 			li {
 				&:first-child {
