cleaning, cookie banner decline options, spelling misstakes

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -177,7 +177,7 @@
                 </bio-benefit>
                 <bio-benefit color="inverted" data-resources="[{paths: ['components/BioBenefit/index.js']}]"
                     imgsrc="../../_assets/icon-scalability.svg" title="Scalable Infrastructure">
-                    Grow your library as big as you want. With Biotope collaboration is easy and your projects only uses the Web Components they need so perormance stays high.
+                    Grow your library as big as you want. With Biotope collaboration is easy and your projects only uses the Web Components they need so performance stays high.
                 </bio-benefit>
             </div>
         </div>
@@ -201,7 +201,7 @@
             </div>
             <div class="company__leads">
                 <p>Need help setting up your frontend ecosystem? <br>
-                    We love to support you.</p>
+                    We'd love to support you.</p>
                 <bio-button title="Contact VI" modifier="full"
                     data-resources="[{paths: ['components/BioButton/index.js']}]" url="mailto:biotope.support@virtual-identity.com"></bio-button>
             </div>
