--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -89,7 +89,7 @@
 				imgsrc="_assets/BioEasySetUp/2.svg"
 				alt="step two"
                 headline="Set Up Project"
-                text="Trust the CLI tool to set up your project. Run command to create Biotope-Boilerplate and choose preferences:"
+                text="Trust the CLI tool to set up your project. Run command to create Biotope-Boilerplate and choose preferences."
                 code="biotope create myEcosystem">
             </bio-easy-set-up>
             <bio-easy-set-up data-resources="[{paths: ['components/BioEasySetUp/index.js']}]"
